# btg-confirmations--tracker

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup_venv.py
src/: config.py  main.py
src/apps/: cli.py  web.py
src/btg/: estimator.py  fetcher.py  forms.py  progress.py
src/templates/: form-tailwind.html  form.html
tests/: test_cli.py  test_fetcher.py  test_main.py  test_progress.py  test_web.py
